@@ -6,6 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+
+February 9 2003 Heikki Sairanen <sonor@phpoint.fi>
+
+	* Monsters appearing from fountains are sometimes friendly.
+	
 February 9 2003 Heikki Sairanen <sonor@phpoint.fi>
 
 	* Igor portated to Linux
